--- a/PM_frontend/package.json
+++ b/PM_frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
